--- a/page_template/index.html
+++ b/page_template/index.html
@@ -4,6 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pico Form-Factor Compatible Boards</title>
+
+    <meta name="description" content="An ever-growing list of Pi Pico form-factor compatible dev boards.">
+    <meta name="author" content="arturo182">
+
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://arturo182.github.io/pico-compatible-boards/">
+    <meta property="og:title" content="Pico Form-Factor Compatible Boards List">
+    <meta property="og:description" content="An ever-growing list of Pi Pico form-factor compatible dev boards.">
+    <meta property="og:site_name" content="Pico Form-Factor Compatible Boards List">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.3.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.datatables.net/1.13.6/css/dataTables.bootstrap5.min.css">
     <link rel="stylesheet" href="https://cdn.datatables.net/responsive/2.5.0/css/responsive.bootstrap5.min.css">
