--- a/page_template/index.html
+++ b/page_template/index.html
@@ -13,9 +13,11 @@
     <meta property="og:title" content="Pico Form-Factor Compatible Boards List">
     <meta property="og:description" content="An ever-growing list of Pi Pico form-factor compatible dev boards.">
     <meta property="og:site_name" content="Pico Form-Factor Compatible Boards List">
+    <meta property="og:image" content="https://og.tailgraph.com/og?fontFamily=Roboto&title=Pico%20Form-Factor%20Compatible%20Boards&titleTailwind=text-gray-800%20font-bold%20text-6xl&text=An%20ever-growing%20list%20of%20Pi%20Pico%20form-factor%20compatible%20dev%20boards.&textTailwind=text-gray-700%20text-2xl%20mt-4&logoTailwind=h-8&bgTailwind=bg-blueGray-600&footer=by%20arturo182&footerTailwind=text-gray-600">
+
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdn.datatables.net/v/bs5/jq-3.7.0/dt-2.3.1/r-3.0.4/datatables.min.css">
+    <link rel="stylesheet" href="https://cdn.datatables.net/v/bs5/jq-3.7.0/dt-2.3.1/fh-4.0.2/r-3.0.4/datatables.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -25,25 +27,35 @@
 
         <div class="filter-bar-wrapper">
             <div id="chipFilterGroup" class="filter-group"></div>
-            <div id="usbFilterGroup" class="filter-group"></div>
+            <div id="coresFilterGroup" class="filter-group"></div>
+            <div style="display: inline-block; vertical-align: top">
+                <div id="flashFilterGroup" class="filter-group" style="display: block; margin-bottom: 15px"></div>
+                <div id="ramFilterGroup" class="filter-group"></div>
+            </div>
+            <div style="display: inline-block; vertical-align: top">
+                <div id="usbFilterGroup" class="filter-group " style="display: block; margin-bottom: 15px"></div>
+                <div id="smdFilterGroup" class="filter-group"></div>
+            </div>
+            <div id="dimensionsFilterGroup" class="filter-group"></div>
             <div id="connectivityFilterGroup" class="filter-group"></div>
-            <div id="smdFilterGroup" class="filter-group"></div>
-            <div id="flashFilterGroup" class="filter-group"></div>
-            <div id="ramFilterGroup" class="filter-group"></div>
+            <div id="connectorsFilterGroup" class="filter-group"></div>
         </div>
 
-        <table id="boardsTable" class="table table-striped table-bordered dt-responsive nowrap" style="width:100%">
+        <table id="boardsTable" class="table table-striped table-bordered dt-responsive nowrap" style="width: 100%">
             <thead>
                 <tr>
-                    <th class="image-col all">Image</th>
-                    <th class="all">Name</th>
+                    <th class="image-column">Image</th>
+                    <th>Name</th>
                     <th>Chip</th>
+                    <th>Cores</th>
                     <th>Flash</th>
                     <th>RAM</th>
                     <th>USB</th>
+                    <th>Dim<br>(mm)</th>
                     <th>Connectivity</th>
-                    <th>SMD Mountable</th>
-                    <th data-priority="10001">Notes</th>
+                    <th>Connectors</th>
+                    <th class="smd-column">SMD<br>Mount</th>
+                    <th class="notes-column">Notes</th>
                 </tr>
             </thead>
             <tbody></tbody>
@@ -68,7 +80,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://cdn.datatables.net/v/bs5/jq-3.7.0/dt-2.3.1/r-3.0.4/datatables.min.js"></script>
+    <script src="https://cdn.datatables.net/v/bs5/jq-3.7.0/dt-2.3.1/fh-4.0.2/r-3.0.4/datatables.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
